<resources>
    <string name="app_name">University Management</string>
    <string name="button1">Get Student Details</string>
    <string name="button2">Get Student of class</string>
    <string name="button3">Admit New Student</string>
    <string name="button4">Update Student Name</string>
    <string name="button5">Delete Student</string>
    <string name="button6">Enroll Student to a Class</string>
    <string name="awaiting_response">Waiting for response!</string>
    <string name="serverCheckURL">http://35.200.253.206/students</string>
    <string name="errorText">Server unavailable. Please try again later!</string>
    <string name="submitButtonText">Submit</string>
    <string name="nothingSelectedYet">Nothing Selected Yet !!</string>
    <string-array name="get_student_details_drop_down">
        <item>Get All Students Data</item>
        <item>Get Data By ID</item>
    </string-array>
</resources>
